# DevOps-Project

./: .dockerignore  .editorconfig  .env.example  .gitignore  CICD_DOCUMENTATION.md  COMPLETION_REPORT.txt  Dockerfile  FILE_INDEX.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  validate.yml
.zap/: rules.tsv
app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml
scripts/: docker-test.sh  format.sh  lint.sh  security.sh
tests/: conftest.py  test_auth.py  test_health.py  test_tasks.py
